Added MySql.Data Package Added basic database connection for testing

--- a/LambdaVGames/LambdaVGames.csproj
+++ b/LambdaVGames/LambdaVGames.csproj
@@ -12,4 +12,8 @@
       <Folder Include="Dev\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MySql.Data" Version="9.1.0" />
+    </ItemGroup>
+
 </Project>
