--- a/LambdaVGames/LambdaVGames.csproj
+++ b/LambdaVGames/LambdaVGames.csproj
@@ -14,6 +14,14 @@
 
     <ItemGroup>
       <PackageReference Include="MySql.Data" Version="9.1.0" />
+      <PackageReference Include="WpfAnimatedGif" Version="2.0.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Resources\LoadingIcon.gif" />
+      <Resource Include="Resources\LoadingIcon.gif">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Resource>
     </ItemGroup>
 
 </Project>
