--- a/LambdaVGames/LambdaVGames.csproj
+++ b/LambdaVGames/LambdaVGames.csproj
@@ -22,6 +22,14 @@
       <Resource Include="Resources\LoadingIcon.gif">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Resource>
+      <None Remove="Resources\MissingImage.svg" />
+      <Resource Include="Resources\MissingImage.svg">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Resource>
+      <None Remove="Resources\MissingImage.png" />
+      <Resource Include="Resources\MissingImage.png">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Resource>
     </ItemGroup>
 
 </Project>
