--- a/LambdaVGames/LambdaVGames.csproj
+++ b/LambdaVGames/LambdaVGames.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Extended.Wpf.Toolkit" Version="4.6.1" />
       <PackageReference Include="MySql.Data" Version="9.1.0" />
       <PackageReference Include="WpfAnimatedGif" Version="2.0.2" />
     </ItemGroup>
